<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/Silver"
    android:orientation="vertical">

    <TextView
        android:id="@+id/abroad_takephoto"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/abroad_photo"
        android:textColor="@color/Black"
        android:textSize="@dimen/minSp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/Silver" />

    <TextView
        android:id="@+id/abroad_choosephoto"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/abroad_choosephotp"
        android:textColor="@color/Black"
        android:textSize="@dimen/minSp" />


    <TextView
        android:id="@+id/abroad_choose_cancel"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="@dimen/minMargin"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/abroad_cancel"
        android:textColor="@color/Black"
        android:textSize="@dimen/minSp" />
</LinearLayout>