<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/minMargin"
    android:paddingRight="@dimen/minMargin">


    <android.support.design.widget.TextInputLayout
        android:id="@+id/nickName_inputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/bigMargin"
        android:scrollbarAlwaysDrawHorizontalTrack="true">

        <EditText

            android:id="@+id/nickName_ev"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/phone"
            android:drawablePadding="@dimen/dp_10"
            android:drawableStart="@drawable/phone"
            android:hint="@string/nickname"
            android:inputType="number" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/password_inputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nickName_inputLayout"
        android:layout_marginTop="@dimen/midMargin"
        android:scrollbarAlwaysDrawHorizontalTrack="true"
        app:counterEnabled="true"
        app:counterMaxLength="15"
        app:errorEnabled="false"
        app:errorTextAppearance="@color/red">

        <EditText
            android:id="@+id/password_ev"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nickName_ev"
            android:drawableLeft="@drawable/password"
            android:drawablePadding="@dimen/minMargin"
            android:drawableStart="@drawable/password"
            android:hint="@string/password"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/userName_inputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_inputLayout"
        android:scrollbarAlwaysDrawHorizontalTrack="true">

        <EditText
            android:id="@+id/userName_ev"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password_inputLayout"
            android:drawableLeft="@drawable/account"
            android:drawablePadding="@dimen/minMargin"
            android:drawableStart="@drawable/account"
            android:hint="@string/username" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/email_inputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userName_inputLayout"
        android:layout_marginTop="@dimen/midMargin"
        android:scrollbarAlwaysDrawHorizontalTrack="true">

        <EditText
            android:id="@+id/email_ev"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/userName_inputLayout"
            android:drawableLeft="@drawable/email"
            android:drawablePadding="@dimen/dp_10"
            android:drawableStart="@drawable/email"
            android:hint="@string/email" />
    </android.support.design.widget.TextInputLayout>

    <RadioGroup
        android:id="@+id/sex_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email_inputLayout"
        android:layout_marginTop="@dimen/midMargin"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/man_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/man" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/woman" />
    </RadioGroup>

    <Button
        android:id="@+id/register_btn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sex_group"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/minMargin"
        android:background="@drawable/login_btn"
        android:text="@string/register_btntv"
        android:textColor="@color/white" />
</RelativeLayout>