<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/dp_10"
    android:paddingRight="@dimen/dp_10">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/nickName_inputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/bigMargin"
        android:scrollbarAlwaysDrawHorizontalTrack="true">

        <EditText
            android:id="@+id/nickName_ev"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/phone"
            android:drawablePadding="@dimen/dp_10"
            android:drawableStart="@drawable/phone"
            android:text="18133599010"
            android:hint="@string/nickname"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/password_inputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nickName_inputLayout"
        android:layout_marginTop="@dimen/midMargin"
        android:scrollbarAlwaysDrawHorizontalTrack="true">

        <EditText
            android:id="@+id/password_ev"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nickName_ev"
            android:drawableLeft="@drawable/password"
            android:drawablePadding="@dimen/dp_10"
            android:drawableStart="@drawable/password"
            android:text="123456"
            android:hint="@string/password"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="@dimen/login_btn_width"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/password_inputLayout"
        android:layout_marginEnd="@dimen/maxMargin"
        android:layout_marginRight="@dimen/maxMargin"
        android:layout_marginTop="@dimen/midMargin"
        android:background="@drawable/login_btn"
        android:text="@string/login_tv"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/register_btn"
        android:layout_width="@dimen/login_btn_width"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/password_inputLayout"
        android:layout_marginLeft="@dimen/maxMargin"
        android:layout_marginStart="@dimen/maxMargin"
        android:layout_marginTop="@dimen/midMargin"
        android:background="@drawable/register_btn"
        android:text="@string/register_tv"
        android:textColor="@color/register_tvcolor" />

</RelativeLayout>